--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ jobs:
               #run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
         - name: Login to Docker Hub
-          uses: docker/login-actions@v2
+          uses: docker/login-action@v2
           with:
               username: ${{ secrets.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_PASSWORD }}
       
         - name: Docker build and Push
-          uses: docker/build-push-actions@v4
+          uses: docker/build-push-action@v4
           with:
               context: nginx-load-balancer/
               # push: true
