--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,5 @@ jobs:
           uses: docker/build-push-action@v4
           with:
               context: nginx-load-balancer/
-              # push: true
-              # tag: 
-              run: docker push wasimiqbalsidhu/task1
+              push: true
+              tag: wasimiqbalsidhu/task1:latest
