--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
           with:
               context: nginx-load-balancer/
               push: true
-              tag: wasimiqbalsidhu/task1:latest
+              tags: wasimiqbalsidhu/task1:latest
