Update and rename image.yml to github-image.yml

--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -19,5 +19,5 @@ jobs:
       
         - name: Docker build and Push
           run: |
-            docker build ./nginx-load-balancer/ --tag ghcr.io/wasim-iqbal/task11:latest
+            docker build nginx-load-balancer/ --tag ghcr.io/wasim-iqbal/task11:latest
             docker push ghcr.io/wasim-iqbal/task11:latest
