--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -1,7 +1,6 @@
 name: Docker Image Build and Push
 
-on:
-  push
+on: push
   #   branches: [ "main" ]
   # pull_request:
   #   branches: [ "main" ]
