--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -1,9 +1,10 @@
 name: Docker Image Build and Push
 
-on: push
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
