--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -15,7 +15,7 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Login to GitHub
-          run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }}
+          run: docker login --u wasim-iqbal --p ${{ secrets.GHCR_TOKEN }} ghcr.io
       
         - name: Docker build and Push
           run: |
