--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -34,5 +34,5 @@ jobs:
         
         - name: Green build and Push
           run: |
-            docker build green/ --tag ghcr.io/wasim-iqbal/geen-app:latest
-            docker push ghcr.io/wasim-iqbal/green-app:v1.0
+            docker build green/ --tag ghcr.io/wasim-iqbal/green-app:latest
+            docker push ghcr.io/wasim-iqbal/green-app:latest
