--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -13,7 +13,6 @@ jobs:
     steps:
         - name: Check out the repository 
           uses: actions/checkout@v3
-
         - name: Login to GitHub
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
@@ -26,6 +25,8 @@ jobs:
     steps:
         - name: Check out the repository 
           uses: actions/checkout@v3
+        - name: Login to GitHub
+          run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
             docker build red/ --tag ghcr.io/wasim-iqbal/red-app:latest
@@ -36,6 +37,8 @@ jobs:
     steps:
         - name: Check out the repository 
           uses: actions/checkout@v3
+        - name: Login to GitHub
+          run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
             docker build yellow/ --tag ghcr.io/wasim-iqbal/yellow-app:latest
@@ -46,6 +49,8 @@ jobs:
     steps:
         - name: Check out the repository 
           uses: actions/checkout@v3
+        - name: Login to GitHub
+          run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
             docker build green/ --tag ghcr.io/wasim-iqbal/green-app:latest
