--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -35,8 +35,8 @@ jobs:
   Yellow_app:
     runs-on: ubuntu-latest
     steps:
-        # - name: Check out the repository 
-        #   uses: actions/checkout@v3
+        - name: Check out the repository 
+          uses: actions/checkout@v3
         - name: Login to GitHub
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
