--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -7,22 +7,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # Pre_Reqs:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #       - name: Check out the repository 
-  #         uses: actions/checkout@v3
-  #       - name: Login to GitHub
-  #         run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
-  Nginx_Load_Balancer:
-    # needs: Pre_Reqs
+  Pre_Reqs:
     runs-on: ubuntu-latest
-
     steps:
         - name: Check out the repository 
           uses: actions/checkout@v3
         - name: Login to GitHub
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
+  Nginx_Load_Balancer:
+    needs: Pre_Reqs
+    runs-on: ubuntu-latest
+
+    steps:
+        # - name: Check out the repository 
+        #   uses: actions/checkout@v3
+        # - name: Login to GitHub
+        #   run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
             docker build nginx-load-balancer/ --tag ghcr.io/wasim-iqbal/nginx-load-balancer:latest
@@ -58,8 +58,8 @@ jobs:
     # needs: Pre_Reqs
     runs-on: ubuntu-latest
     steps:
-        # - name: Check out the repository 
-        #   uses: actions/checkout@v3
+        - name: Check out the repository 
+          uses: actions/checkout@v3
         - name: Login to GitHub
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
