--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -54,7 +54,7 @@ jobs:
         #   run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
-            bash /jobs.sh
+            bash jobs.sh
             docker build yellow/ --tag ghcr.io/wasim-iqbal/yellow-app:latest
             docker push ghcr.io/wasim-iqbal/yellow-app:latest
   
