--- a/.github/workflows/github-image.yml
+++ b/.github/workflows/github-image.yml
@@ -17,8 +17,10 @@ jobs:
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
-            docker build nginx-load-balancer/ --tag ghcr.io/wasim-iqbal/nginx-load-balancer:latest
-            docker push ghcr.io/wasim-iqbal/nginx-load-balancer:latest
+            docker build nginx-load-balancer/ 
+            # --tag ghcr.io/wasim-iqbal/nginx-load-balancer:latest
+            docker push ghcr.io/wasim-iqbal/
+            # nginx-load-balancer:latest
   
   Red_app:
     runs-on: ubuntu-latest
@@ -29,8 +31,10 @@ jobs:
           run: docker login --username wasim-iqbal --password ${{ secrets.GHCR_TOKEN }} ghcr.io
         - name: Build and Push
           run: |
-            docker build red/ --tag ghcr.io/wasim-iqbal/red-app:latest
-            docker push ghcr.io/wasim-iqbal/red-app:latest
+            docker build red/ --tag ghcr.io/wasim-iqbal/
+            # red-app:latest
+            docker push ghcr.io/wasim-iqbal/
+            # red-app:latest
   
   Yellow_app:
     runs-on: ubuntu-latest
